exports[`prefer-bigint-literals > invalid(1): BigInt(\"0\") 1`] = `

  1 | BigInt("0")

`;

exports[`prefer-bigint-literals > invalid(1): BigInt(\"0\") 2`] = `

Message:
> 1 | BigInt("0")
    | ^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0n

`;

exports[`prefer-bigint-literals > invalid(10): BigInt(0O777_777) 1`] = `

  1 | BigInt(0O777_777)

`;

exports[`prefer-bigint-literals > invalid(10): BigInt(0O777_777) 2`] = `

Message:
> 1 | BigInt(0O777_777)
    | ^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0O777_777n

`;

exports[`prefer-bigint-literals > invalid(11): BigInt(0XFe_fE) 1`] = `

  1 | BigInt(0XFe_fE)

`;

exports[`prefer-bigint-literals > invalid(11): BigInt(0XFe_fE) 2`] = `

Message:
> 1 | BigInt(0XFe_fE)
    | ^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0XFe_fEn

`;

exports[`prefer-bigint-literals > invalid(12): BigInt(0777) 1`] = `

  1 | BigInt(0777)

`;

exports[`prefer-bigint-literals > invalid(12): BigInt(0777) 2`] = `

Message:
> 1 | BigInt(0777)
    | ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`511n\`.:
  1 | 511n

`;

exports[`prefer-bigint-literals > invalid(13): BigInt(0888) 1`] = `

  1 | BigInt(0888)

`;

exports[`prefer-bigint-literals > invalid(13): BigInt(0888) 2`] = `

Message:
> 1 | BigInt(0888)
    | ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`888n\`.:
  1 | 888n

`;

exports[`prefer-bigint-literals > invalid(14): BigInt(9007199254740993) 1`] = `

  1 | BigInt(9007199254740993)

`;

exports[`prefer-bigint-literals > invalid(14): BigInt(9007199254740993) 2`] = `

Message:
> 1 | BigInt(9007199254740993)
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`9007199254740992n\`.:
  1 | 9007199254740992n

`;

exports[`prefer-bigint-literals > invalid(15): BigInt(0x20000000000001) 1`] = `

  1 | BigInt(0x20000000000001)

`;

exports[`prefer-bigint-literals > invalid(15): BigInt(0x20000000000001) 2`] = `

Message:
> 1 | BigInt(0x20000000000001)
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`9007199254740992n\`.:
  1 | 9007199254740992n

`;

exports[`prefer-bigint-literals > invalid(16): BigInt(9_007_199_254_740_993) 1`] = `

  1 | BigInt(9_007_199_254_740_993)

`;

exports[`prefer-bigint-literals > invalid(16): BigInt(9_007_199_254_740_993) 2`] = `

Message:
> 1 | BigInt(9_007_199_254_740_993)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`9007199254740992n\`.:
  1 | 9007199254740992n

`;

exports[`prefer-bigint-literals > invalid(17): BigInt(0x20_00_00_00_00_00_01) 1`] = `

  1 | BigInt(0x20_00_00_00_00_00_01)

`;

exports[`prefer-bigint-literals > invalid(17): BigInt(0x20_00_00_00_00_00_01) 2`] = `

Message:
> 1 | BigInt(0x20_00_00_00_00_00_01)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`9007199254740992n\`.:
  1 | 9007199254740992n

`;

exports[`prefer-bigint-literals > invalid(18): BigInt(1.0) 1`] = `

  1 | BigInt(1.0)

`;

exports[`prefer-bigint-literals > invalid(18): BigInt(1.0) 2`] = `

Message:
> 1 | BigInt(1.0)
    | ^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`1n\`.:
  1 | 1n

`;

exports[`prefer-bigint-literals > invalid(19): BigInt(1e2) 1`] = `

  1 | BigInt(1e2)

`;

exports[`prefer-bigint-literals > invalid(19): BigInt(1e2) 2`] = `

Message:
> 1 | BigInt(1e2)
    | ^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`100n\`.:
  1 | 100n

`;

exports[`prefer-bigint-literals > invalid(2): BigInt(\"  0  \") 1`] = `

  1 | BigInt("  0  ")

`;

exports[`prefer-bigint-literals > invalid(2): BigInt(\"  0  \") 2`] = `

Message:
> 1 | BigInt("  0  ")
    | ^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0n

`;

exports[`prefer-bigint-literals > invalid(20): BigInt(/* comment */1) 1`] = `

  1 | BigInt(/* comment */1)

`;

exports[`prefer-bigint-literals > invalid(20): BigInt(/* comment */1) 2`] = `

Message:
> 1 | BigInt(/* comment */1)
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`1n\`.:
  1 | 1n

`;

exports[`prefer-bigint-literals > invalid(21): BigInt(9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999) 1`] = `

  1 | BigInt(9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999)

`;

exports[`prefer-bigint-literals > invalid(21): BigInt(9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999) 2`] = `

Message:
> 1 | BigInt(9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with a bigint literal.:
  1 | 10000000000000000159028911097599180468360808563945281389781327557747838772170381060813469985856815104n

`;

exports[`prefer-bigint-literals > invalid(22): BigInt(\"-1\") 1`] = `

  1 | BigInt("-1")

`;

exports[`prefer-bigint-literals > invalid(22): BigInt(\"-1\") 2`] = `

Message:
> 1 | BigInt("-1")
    | ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | (-1n)

`;

exports[`prefer-bigint-literals > invalid(23): BigInt(\"+1\") 1`] = `

  1 | BigInt("+1")

`;

exports[`prefer-bigint-literals > invalid(23): BigInt(\"+1\") 2`] = `

Message:
> 1 | BigInt("+1")
    | ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`1n\`.:
  1 | 1n

`;

exports[`prefer-bigint-literals > invalid(24): BigInt(-1) 1`] = `

  1 | BigInt(-1)

`;

exports[`prefer-bigint-literals > invalid(24): BigInt(-1) 2`] = `

Message:
> 1 | BigInt(-1)
    | ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | (-1n)

`;

exports[`prefer-bigint-literals > invalid(25): BigInt(+1) 1`] = `

  1 | BigInt(+1)

`;

exports[`prefer-bigint-literals > invalid(25): BigInt(+1) 2`] = `

Message:
> 1 | BigInt(+1)
    | ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`1n\`.:
  1 | 1n

`;

exports[`prefer-bigint-literals > invalid(26): -BigInt(-1) 1`] = `

  1 | -BigInt(-1)

`;

exports[`prefer-bigint-literals > invalid(26): -BigInt(-1) 2`] = `

Message:
> 1 | -BigInt(-1)
    |  ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | -(-1n)

`;

exports[`prefer-bigint-literals > invalid(27): -BigInt(\"-1\") 1`] = `

  1 | -BigInt("-1")

`;

exports[`prefer-bigint-literals > invalid(27): -BigInt(\"-1\") 2`] = `

Message:
> 1 | -BigInt("-1")
    |  ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | -(-1n)

`;

exports[`prefer-bigint-literals > invalid(28): -BigInt(1) 1`] = `

  1 | -BigInt(1)

`;

exports[`prefer-bigint-literals > invalid(28): -BigInt(1) 2`] = `

Message:
> 1 | -BigInt(1)
    |  ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | -1n

`;

exports[`prefer-bigint-literals > invalid(29): -BigInt(\"1\") 1`] = `

  1 | -BigInt("1")

`;

exports[`prefer-bigint-literals > invalid(29): -BigInt(\"1\") 2`] = `

Message:
> 1 | -BigInt("1")
    |  ^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | -1n

`;

exports[`prefer-bigint-literals > invalid(3): BigInt(\"9007199254740993\") 1`] = `

  1 | BigInt("9007199254740993")

`;

exports[`prefer-bigint-literals > invalid(3): BigInt(\"9007199254740993\") 2`] = `

Message:
> 1 | BigInt("9007199254740993")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 9007199254740993n

`;

exports[`prefer-bigint-literals > invalid(30): BigInt(\" +1 \") 1`] = `

  1 | BigInt(" +1 ")

`;

exports[`prefer-bigint-literals > invalid(30): BigInt(\" +1 \") 2`] = `

Message:
> 1 | BigInt(" +1 ")
    | ^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`1n\`.:
  1 | 1n

`;

exports[`prefer-bigint-literals > invalid(31): BigInt(\" -1 \") 1`] = `

  1 | BigInt(" -1 ")

`;

exports[`prefer-bigint-literals > invalid(31): BigInt(\" -1 \") 2`] = `

Message:
> 1 | BigInt(" -1 ")
    | ^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | (-1n)

`;

exports[`prefer-bigint-literals > invalid(32): \n\t\tfoo\n\t\tBigInt(\"-1\")\n\t\t 1`] = `

  1 |
  2 | 		foo
  3 | 		BigInt("-1")
  4 | 		

`;

exports[`prefer-bigint-literals > invalid(32): \n\t\tfoo\n\t\tBigInt(\"-1\")\n\t\t 2`] = `

Message:
  1 |
  2 | 		foo
> 3 | 		BigInt("-1")
    | 		^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.
  4 | 		

Output:
  1 |
  2 | 		foo
  3 | 		;(-1n)
  4 | 		

`;

exports[`prefer-bigint-literals > invalid(33): -BigInt(\"+1\") 1`] = `

  1 | -BigInt("+1")

`;

exports[`prefer-bigint-literals > invalid(33): -BigInt(\"+1\") 2`] = `

Message:
> 1 | -BigInt("+1")
    |  ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`1n\`.:
  1 | -1n

`;

exports[`prefer-bigint-literals > invalid(34): -BigInt(/* comment */-1) 1`] = `

  1 | -BigInt(/* comment */-1)

`;

exports[`prefer-bigint-literals > invalid(34): -BigInt(/* comment */-1) 2`] = `

Message:
> 1 | -BigInt(/* comment */-1)
    |  ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`-1n\`.:
  1 | -(-1n)

`;

exports[`prefer-bigint-literals > invalid(35): -(BigInt(-1)) 1`] = `

  1 | -(BigInt(-1))

`;

exports[`prefer-bigint-literals > invalid(35): -(BigInt(-1)) 2`] = `

Message:
> 1 | -(BigInt(-1))
    |   ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | -(-1n)

`;

exports[`prefer-bigint-literals > invalid(36): 2n - BigInt(\"-1\") 1`] = `

  1 | 2n - BigInt("-1")

`;

exports[`prefer-bigint-literals > invalid(36): 2n - BigInt(\"-1\") 2`] = `

Message:
> 1 | 2n - BigInt("-1")
    |      ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 2n - (-1n)

`;

exports[`prefer-bigint-literals > invalid(37): 2n -BigInt(\"-1\") 1`] = `

  1 | 2n -BigInt("-1")

`;

exports[`prefer-bigint-literals > invalid(37): 2n -BigInt(\"-1\") 2`] = `

Message:
> 1 | 2n -BigInt("-1")
    |     ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 2n -(-1n)

`;

exports[`prefer-bigint-literals > invalid(38): BigInt(-1).toString() 1`] = `

  1 | BigInt(-1).toString()

`;

exports[`prefer-bigint-literals > invalid(38): BigInt(-1).toString() 2`] = `

Message:
> 1 | BigInt(-1).toString()
    | ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | (-1n).toString()

`;

exports[`prefer-bigint-literals > invalid(39): functionCall(-BigInt(1)) 1`] = `

  1 | functionCall(-BigInt(1))

`;

exports[`prefer-bigint-literals > invalid(39): functionCall(-BigInt(1)) 2`] = `

Message:
> 1 | functionCall(-BigInt(1))
    |               ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | functionCall(-1n)

`;

exports[`prefer-bigint-literals > invalid(4): BigInt(\"0B11\") 1`] = `

  1 | BigInt("0B11")

`;

exports[`prefer-bigint-literals > invalid(4): BigInt(\"0B11\") 2`] = `

Message:
> 1 | BigInt("0B11")
    | ^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0B11n

`;

exports[`prefer-bigint-literals > invalid(40): obj[BigInt(1)] 1`] = `

  1 | obj[BigInt(1)]

`;

exports[`prefer-bigint-literals > invalid(40): obj[BigInt(1)] 2`] = `

Message:
> 1 | obj[BigInt(1)]
    |     ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | obj[1n]

`;

exports[`prefer-bigint-literals > invalid(41): arr[BigInt(0)] 1`] = `

  1 | arr[BigInt(0)]

`;

exports[`prefer-bigint-literals > invalid(41): arr[BigInt(0)] 2`] = `

Message:
> 1 | arr[BigInt(0)]
    |     ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | arr[0n]

`;

exports[`prefer-bigint-literals > invalid(42): void BigInt(1) 1`] = `

  1 | void BigInt(1)

`;

exports[`prefer-bigint-literals > invalid(42): void BigInt(1) 2`] = `

Message:
> 1 | void BigInt(1)
    |      ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | void 1n

`;

exports[`prefer-bigint-literals > invalid(43): typeof BigInt(1) 1`] = `

  1 | typeof BigInt(1)

`;

exports[`prefer-bigint-literals > invalid(43): typeof BigInt(1) 2`] = `

Message:
> 1 | typeof BigInt(1)
    |        ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | typeof 1n

`;

exports[`prefer-bigint-literals > invalid(44): BigInt(1) + BigInt(2) 1`] = `

  1 | BigInt(1) + BigInt(2)

`;

exports[`prefer-bigint-literals > invalid(44): BigInt(1) + BigInt(2) 2`] = `

Message:
> 1 | BigInt(1) + BigInt(2)
    | ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 1n + BigInt(2)

`;

exports[`prefer-bigint-literals > invalid(44): BigInt(1) + BigInt(2) 3`] = `

Message:
> 1 | BigInt(1) + BigInt(2)
    |             ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | BigInt(1) + 2n

`;

exports[`prefer-bigint-literals > invalid(45): BigInt(1) ** 2n 1`] = `

  1 | BigInt(1) ** 2n

`;

exports[`prefer-bigint-literals > invalid(45): BigInt(1) ** 2n 2`] = `

Message:
> 1 | BigInt(1) ** 2n
    | ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 1n ** 2n

`;

exports[`prefer-bigint-literals > invalid(46): condition ? BigInt(1) : BigInt(2) 1`] = `

  1 | condition ? BigInt(1) : BigInt(2)

`;

exports[`prefer-bigint-literals > invalid(46): condition ? BigInt(1) : BigInt(2) 2`] = `

Message:
> 1 | condition ? BigInt(1) : BigInt(2)
    |             ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | condition ? 1n : BigInt(2)

`;

exports[`prefer-bigint-literals > invalid(46): condition ? BigInt(1) : BigInt(2) 3`] = `

Message:
> 1 | condition ? BigInt(1) : BigInt(2)
    |                         ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | condition ? BigInt(1) : 2n

`;

exports[`prefer-bigint-literals > invalid(47): +BigInt(1) 1`] = `

  1 | +BigInt(1)

`;

exports[`prefer-bigint-literals > invalid(47): +BigInt(1) 2`] = `

Message:
> 1 | +BigInt(1)
    |  ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | +1n

`;

exports[`prefer-bigint-literals > invalid(48): +BigInt(-1) 1`] = `

  1 | +BigInt(-1)

`;

exports[`prefer-bigint-literals > invalid(48): +BigInt(-1) 2`] = `

Message:
> 1 | +BigInt(-1)
    |  ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | +(-1n)

`;

exports[`prefer-bigint-literals > invalid(49): +BigInt(\"1\") 1`] = `

  1 | +BigInt("1")

`;

exports[`prefer-bigint-literals > invalid(49): +BigInt(\"1\") 2`] = `

Message:
> 1 | +BigInt("1")
    |  ^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | +1n

`;

exports[`prefer-bigint-literals > invalid(5): BigInt(\"0O777\") 1`] = `

  1 | BigInt("0O777")

`;

exports[`prefer-bigint-literals > invalid(5): BigInt(\"0O777\") 2`] = `

Message:
> 1 | BigInt("0O777")
    | ^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0O777n

`;

exports[`prefer-bigint-literals > invalid(50): BigInt(+0) 1`] = `

  1 | BigInt(+0)

`;

exports[`prefer-bigint-literals > invalid(50): BigInt(+0) 2`] = `

Message:
> 1 | BigInt(+0)
    | ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`0n\`.:
  1 | 0n

`;

exports[`prefer-bigint-literals > invalid(51): BigInt(-0) 1`] = `

  1 | BigInt(-0)

`;

exports[`prefer-bigint-literals > invalid(51): BigInt(-0) 2`] = `

Message:
> 1 | BigInt(-0)
    | ^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0n

`;

exports[`prefer-bigint-literals > invalid(52): BigInt(\"+0\") 1`] = `

  1 | BigInt("+0")

`;

exports[`prefer-bigint-literals > invalid(52): BigInt(\"+0\") 2`] = `

Message:
> 1 | BigInt("+0")
    | ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`0n\`.:
  1 | 0n

`;

exports[`prefer-bigint-literals > invalid(53): -BigInt(\"-0\") 1`] = `

  1 | -BigInt("-0")

`;

exports[`prefer-bigint-literals > invalid(53): -BigInt(\"-0\") 2`] = `

Message:
> 1 | -BigInt("-0")
    |  ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | -0n

`;

exports[`prefer-bigint-literals > invalid(54): 1n - (( BigInt(\"-1\") )) 1`] = `

  1 | 1n - (( BigInt("-1") ))

`;

exports[`prefer-bigint-literals > invalid(54): 1n - (( BigInt(\"-1\") )) 2`] = `

Message:
> 1 | 1n - (( BigInt("-1") ))
    |         ^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 1n - (( -1n ))

`;

exports[`prefer-bigint-literals > invalid(55): BigInt(-(+(-10))) 1`] = `

  1 | BigInt(-(+(-10)))

`;

exports[`prefer-bigint-literals > invalid(55): BigInt(-(+(-10))) 2`] = `

Message:
> 1 | BigInt(-(+(-10)))
    | ^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Suggestion 1/1: Replace with \`10n\`.:
  1 | 10n

`;

exports[`prefer-bigint-literals > invalid(6): BigInt(\"0XFe\") 1`] = `

  1 | BigInt("0XFe")

`;

exports[`prefer-bigint-literals > invalid(6): BigInt(\"0XFe\") 2`] = `

Message:
> 1 | BigInt("0XFe")
    | ^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0XFen

`;

exports[`prefer-bigint-literals > invalid(7): BigInt(\"9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999\") 1`] = `

  1 | BigInt("9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999")

`;

exports[`prefer-bigint-literals > invalid(7): BigInt(\"9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999\") 2`] = `

Message:
> 1 | BigInt("9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999n

`;

exports[`prefer-bigint-literals > invalid(8): BigInt(0) 1`] = `

  1 | BigInt(0)

`;

exports[`prefer-bigint-literals > invalid(8): BigInt(0) 2`] = `

Message:
> 1 | BigInt(0)
    | ^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0n

`;

exports[`prefer-bigint-literals > invalid(9): BigInt(0B11_11) 1`] = `

  1 | BigInt(0B11_11)

`;

exports[`prefer-bigint-literals > invalid(9): BigInt(0B11_11) 2`] = `

Message:
> 1 | BigInt(0B11_11)
    | ^^^^^^^^^^^^^^^ Prefer using bigint literal over \`BigInt(…)\`.

Output:
  1 | 0B11_11n

`;
